# Clinic-Appointments-MS

./: .gitignore  LICENSE  assumptions.txt  errors.md  main.py  notes.md  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 50e2c2c1cdda_initial_schema.py
app/api/v1/: dependencies.py  router.py
app/api/v1/endpoints/: admin.py  appointments.py  auth.py  doctor.py  patients.py  reception.py  settings.py  stats.py  users.py
app/api/v2/: router.py
app/api/v2/endpoints/: appointments.py  auth.py  settings.py  stats.py  users.py
app/core/: auth.py  cache_config.py  config.py
app/db/: base.py  session.py
app/models/: __init__.py  appointment.py  patient.py  settings.py  user.py
app/schemas/: appointment.py  auth.py  patient.py  settings.py  user.py
app/scripts/: seed_admin.py  seed_data.py  seed_settings.py
data/: clinic.db  system_settings_cache.json
extras/: Database Tables.drawio
